--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
     <!--  Home -->
-    <section id="Home">
+    <section id="Home" class="tag">
 
         <div class="home container row">
             <div class="pfimage col-12">
@@ -45,7 +45,7 @@
 
     </section>
     <!-- AboutMe -->
-    <section id="About">
+    <section id="About" class="tag">
         <div class="container">
             <h1 class="text1">About Me</h1>
             <p class="text2">I'm a BCA graduate with a passion for Coding and Web Development.</p>
@@ -55,7 +55,7 @@
 
         <section id="Journey">
             <button class="journey container">
-                <h1>My Journey</h1>
+                <h2>My Journey</h2>
             </button>
             <div class="container hide">
                 <div class="row ">
@@ -99,7 +99,8 @@
                         <p><span>Thanks</span> to the vast resources available online, especially platforms like
                             <span>youtube,
                                 freecodecamp,
-                                Google, Udemy.....</span></p>
+                                Google, Udemy.....</span>
+                        </p>
                     </div>
                     <!-- <div class="col-3"></div> -->
                     <!-- <div class="col-3"></div> -->
@@ -127,7 +128,7 @@
 
     </section>
     <!-- Skills -->
-    <section id="Skills">
+    <section id="Skills" class="tag">
         <h1>Skills</h1>
         <div class="skill container">
             <ul class="list webdev">
@@ -152,15 +153,16 @@
     </section>
 
     <!-- Works -->
-    <section id="Works">
+    <section id="Works" class="tag">
         <h1>My Works</h1>
         <div class="row contain g-2 ">
             <div class=" col-6 col-sm-6 col-lg-4 ">
-                <a href="#"  >
+                <a href="#">
                     <img src="./assets/images/portfolio.png" height="300" alt="img">
                     <div class="overlay">
                         <h2 class="overlay-text">Portfolio</h2>
-                    </div></a>
+                    </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-lg-4">
                 <a data-title="" href="https://navi-hub-14.github.io/TinDog/" target="_blank">
@@ -171,7 +173,7 @@
                 </a>
             </div>
             <div class="col-6 col-sm-6 col-lg-4">
-                <a  href="https://navi-hub-14.github.io/MoveIt/" target="_blank">
+                <a href="https://navi-hub-14.github.io/MoveIt/" target="_blank">
                     <img data="Bootstrap Project" src="./assets/images/MoveIt.png" height="300" alt="img">
                     <div class="overlay">
                         <h2 class="overlay-text">Boostrap Project</h2>
@@ -198,7 +200,10 @@
         </div>
 
     </section>
-
+    <!-- Contact -->
+    <section id="Contact" class="tag">
+        <h1 class="text2">Contact Me</h1>
+    </section>
     <!-- Footer -->
     <section id="Footer">
         <p>&copy;2023 navismedia.com </p>
