--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <section id="Contact" class="tag">
         <h1 class="text2">Contact Me</h1>
         <div class="row container contactBox">
-            <div class="col-4 ">
+            <div class="col-12 col-lg-4">
                 <div class="flexbox">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-envelope-paper-heart-fill" viewBox="0 0 16 16">
@@ -218,7 +218,7 @@
             </div>
         </div>
 
-            <div class="col-4 ">
+            <div class="col-12 col-lg-4 ">
                 <div class="flexbox">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -232,7 +232,7 @@
             </div>
         </div>
 
-            <div class="col-4 ">
+            <div class="col-12 col-lg-4">
                 <div class="flexbox">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16">
