--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <a href="https://navi-hub-14.github.io/my-resume/" target="_blank">
                     <img src="./assets/images/Resume.png" height="300" alt="img">
                     <div class="overlay">
-                        <h2 class="overlay-text">HTML Only</h2>
+                        <h2 class="overlay-text">My Resume</h2>
                     </div>
                 </a>
             </div>
