Add Blog Website Link 0.1

--- a/index.html
+++ b/index.html
@@ -157,9 +157,17 @@
         <h1>My Works</h1>
         <div class="row contain g-2 ">
             <div class=" col-6 col-sm-6 col-lg-4 ">
+                <a href="https://navisblog.onrender.com/" target="_blank">
+                    <img src="./assets/images/blog.png" height="300" alt="img">
+                    <div class="overlay"> 
+                        <h2 class="overlay-text">Web Blog</h2>
+                    </div>
+                </a>
+            </div>
+            <div class=" col-6 col-sm-6 col-lg-4 ">
                 <a href="#">
                     <img src="./assets/images/portfolio.png" height="300" alt="img">
-                    <div class="overlay">
+                    <div class="overlay"> 
                         <h2 class="overlay-text">Portfolio</h2>
                     </div>
                 </a>
@@ -181,7 +189,7 @@
                 </a>
             </div>
 
-            <div class="col-6 col-sm-6 col-lg-6 right">
+            <div class="col-6 col-sm-6 col-lg-4 ">
                 <a href="https://navi-hub-14.github.io/10.3-Mondrian-Project/" target="_blank">
                     <img src="./assets/images/Mondrian.png" height="300" alt="img">
                     <div class="overlay">
@@ -189,7 +197,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-6 left">
+            <div class="col-6 col-sm-6 col-lg-4 ">
                 <a href="https://navi-hub-14.github.io/my-resume/" target="_blank">
                     <img src="./assets/images/Resume.png" height="300" alt="img">
                     <div class="overlay">
@@ -197,6 +205,7 @@
                     </div>
                 </a>
             </div>
+            
         </div>
 
     </section>
