--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                 <li>bootstrap</li>
                 <li>git</li>
                 <li>javascript</li>
+                <li>node.js</li>
+                <li>ejs</li>
             </ul>
 
             <ul class="list multimedia">
@@ -155,8 +157,8 @@
     <!-- Works -->
     <section id="Works" class="tag">
         <h1>My Works</h1>
-        <div class="row contain g-2 ">
-            <div class=" col-6 col-sm-6 col-lg-4 ">
+        <div class="row contain g-1 ">
+            <div class=" col-6 col-sm-6 col-lg-4">
                 <a href="https://navisblog.onrender.com/" target="_blank">
                     <img src="./assets/images/blog.png" height="300" alt="img">
                     <div class="overlay"> 
