--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
         <h1>My Works</h1>
         <div class="row contain g-1 ">
             <div class=" col-6 col-sm-6 col-lg-4">
+                <a href="https://vingame.onrender.com/" target="_blank">
+                    <img src="./assets/images/Sudoku.png" height="300" alt="img">
+                    <div class="overlay"> 
+                        <h2 class="overlay-text">Public API Project</h2>
+                    </div>
+                </a>
+            </div>
+        
+            <div class=" col-6 col-sm-6 col-lg-4">
                 <a href="https://navisblog.onrender.com/" target="_blank">
                     <img src="./assets/images/blog.png" height="300" alt="img">
                     <div class="overlay"> 
