--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <h1>My Works</h1>
         <div class="row contain g-1 ">
             <div class=" col-6 col-sm-6 col-lg-4">
-                <a href="https://vingame.onrender.com/" target="_blank">
+                <a href="https://navis-readfolio.onrender.com" target="_blank">
                     <img src="./assets/images/postgres.png" height="300" alt="img">
                     <div class="overlay"> 
                         <h2 class="overlay-text">PostgreSQL Project</h2>
