--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                 <li>ejs</li>
                 <li>Rest API</li>
                 <li>PostgreSQL</li>
+                <li>React.js</li>
+                <li>Web3</li>
             </ul>
 
             <ul class="list multimedia">
@@ -160,6 +162,14 @@
     <section id="Works" class="tag">
         <h1>My Works</h1>
         <div class="row contain g-1 ">
+            <div class=" col-6 col-sm-6 col-lg-4">
+                <a href="https://pfy7hc.csb.app/" target="_blank">
+                    <img src="./assets/images/reactapp.png" height="300" alt="img">
+                    <div class="overlay"> 
+                        <h2 class="overlay-text">React App</h2>
+                    </div>
+                </a>
+            </div>
             <div class=" col-6 col-sm-6 col-lg-4">
                 <a href="https://vingame.onrender.com/" target="_blank">
                     <img src="./assets/images/postgres.png" height="300" alt="img">
